<?xml version="1.0" encoding="utf-8"?>
<!--
 *******************************************************************************
 *
 * Copyright (C) 2020 Dialog Semiconductor.
 * This computer program includes Confidential, Proprietary Information
 * of Dialog Semiconductor. All Rights Reserved.
 *
 *******************************************************************************
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:orientation="vertical"
    tools:context=".fragment.DeviceFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/not_available"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/deviceName"
            android:layout_marginTop="1dp"
            android:text="@string/address_label"
            android:textColor="#666"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/deviceAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/addressLabel"
            android:layout_alignBaseline="@id/addressLabel"
            android:layout_marginStart="5dp"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/versionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/deviceAddress"
            android:layout_marginTop="1dp"
            android:text="@string/version_label"
            android:textColor="#666"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/versionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/versionLabel"
            android:layout_alignBaseline="@id/versionLabel"
            android:layout_marginStart="5dp"
            android:text="@string/not_available"
            android:textColor="#333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/versionLabel"
            android:layout_alignParentStart="true"
            android:layout_marginTop="1dp"
            android:text="@string/status_label"
            android:textColor="#666"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/statusLabel"
            android:layout_alignBaseline="@id/statusLabel"
            android:layout_marginStart="5dp"
            android:text="@string/status_connecting"
            android:textColor="#333"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/b_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="bt_click"
            android:text="@string/card" />
    </RelativeLayout>

</LinearLayout>
